--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -40,17 +40,17 @@
 
 
         <li class="treeview">
-          <a routerLink="/summary"><i class="fa fa-link"></i> <span>Summary</span>
+          <a routerLink="/summary"><i class="fa fa-link"></i> <span>Master Cage</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#">Dashboard 1</a></li>
-            <li><a href="#">Dashboard 2</a></li>
+            <li><a routerLink="/payroll">Pay Roll</a></li>
+            <li><a routerLink="/payorder">Pay Order</a></li>
           </ul>
         </li>
-        <li><a routerLink="/summary2"><i class="fa fa-link"></i> <span>Sumary 2</span></a></li>
+        <li><a routerLink="/summary2"><i class="fa fa-link"></i> <span>Sumary</span></a></li>
 
 
 
