--- a/src/app/Components/transactions/transactions.component.html
+++ b/src/app/Components/transactions/transactions.component.html
@@ -34,7 +34,7 @@
                       </tr>
                   </thead>
           
-                  <tbody  *ngIf="Transa?.length != 0">
+                  <tbody >
                     <ng-container *ngFor="let trans of Transa ">
                     <tr>
                         <td>{{trans.amount}}</td>
