--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -51,7 +51,8 @@
           </ul>
         </li>
         <li><a routerLink="/summary2"><i class="fa fa-link"></i> <span>Sumary</span></a></li>
-
+        
+        <li><a routerLink="/test"><i class="fa fa-link"></i> <span>TESTEOS</span></a></li>
 
 
       </ul>
