--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <app-header></app-header>
 <app-menu></app-menu>
-<!--<app-setting></app-setting>-->
+<app-setting></app-setting>
 
 <router-outlet></router-outlet>
 
