--- a/src/app/Components/content/content.component.html
+++ b/src/app/Components/content/content.component.html
@@ -1,159 +1,45 @@
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
-  <!-- Content Header (Page header) -->
-  <!--<section class="content-header">
-      <small></small>
-    <ol cla ss="breadcrumb">
-      <li><a href="#"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-      <li class="active">Here</li>
-    </ol>
-  </section>-->
-
-  <!-- Main content -->
+<div class="content-wrapper ">
   <section class="content container-fluid">
-
-    <!--------------------------
-      | Your Page Content Here |
-      -------------------------->
-
-      <h1> USUARIOS: </h1>
-      <h4>
-      <div>
-        <!--<table class="table table-hover table-fixed">-->
-          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-          <!--Table head-->
-          <thead>
-              <tr>
-                  <th>Email</th>
-                  <th>Username</th>
-                  <th>Name</th>
-                  <th>Last_Name</th>
-                  <th>Cuenta</th>
-                  <th>Balance $</th>
-                  <th>Ultimo ingreso</th>
-              </tr>
-          </thead>
-          <!--Table head-->
-          <!--Table body-->
-          <tbody *ngIf="Usuarios?.length != 0">
-            <ng-container *ngFor="let usuario of Usuarios">
-            <tr>
-                <td>{{usuario.email}}</td>
-                <td>{{usuario.username | uppercase}}</td>
-                <td>{{usuario.first_name}}</td>
-                <td>{{usuario.last_name}}</td>
-                <td>{{usuario.account}}</td>
-                <td>{{usuario.balance/100 | currency}}</td>
-
-                <td>{{usuario.last_login  | date  :'medium'}}</td>
-            </tr>
-            </ng-container>
-          </tbody>
-
-          <tbody *ngIf="Usuarios?.length == 0">
-            <tr>
-              <td colspan="5" class="no-data-available">No data!</td>
-            </tr>
-          </tbody>
-
-          <!--Table body-->
-        </table>
-      </div>
-    </h4>
+<div  class="panel panel-flat">
+  <div class="panel-heading">
 
 
 
 
-    <h1> Transacciones: </h1>
-    <h4>
-    <div >
-      <!--<table class="table table-hover table-fixed">-->
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
-        <!--Table head-->
-        <thead>
-            <tr>
-                <th>Monto</th>
-                <th>Total Monto</th>
-                <th>Balance</th>
-                <th>Nombre</th>
-                <th>Estado</th>
-                <th>Cuenta</th>
-
-            </tr>
-        </thead>
-
-        <tbody  *ngIf="Transa?.length != 0">
-          <ng-container *ngFor="let trans of Transa ">
-          <tr>
-              <td>{{trans.amount}}</td>
-              <td>{{trans.total_amount}}</td>
-              <td>{{trans.balance}}</td>
-              <td >
-                <em *ngIf="trans.user" class="reset"> {{trans.user.username}} </em>
-              </td>
-              <td>{{trans.status}}</td>
-              <td>{{trans.account}}</td>
-
-          </tr>
-        </ng-container>
-
-        </tbody>
-        <tbody *ngIf="Transa?.length == 0">
-          <tr>
-            <td colspan="5" class="no-data-available">No data!</td>
-          </tr>
-        <tbody>
-
-      </table>
 
 
-<h1>Summary</h1>
 
-      <table datatable  [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"  class="row-border hover">
-        <!--Table head-->
-        <thead>
-            <tr>
-                <th>Usuario</th>
-                <th>Tipo</th>
-                <th>Subtipo</th>
-                <th>Tipo de moneda</th>
-                <th>Monto</th>
-                <th>Estado</th>
-                <th>Balance</th>
-                <th>Descripcion</th>
-
-            </tr>
-        </thead>
-
-        <tbody *ngIf="Transa?.length != 0" >
-          <ng-container *ngFor="let trans of Transa ">
-          <tr>
-              <td>
-                <em *ngIf="trans.user" class="reset"> {{trans.user.email}} </em>
-              </td>
-              <td>{{trans.tx_type}}</td>
-              <td>{{trans.subtype}}</td>
-              <td >{{trans.currency.code}}  </td>
-              <td>{{trans.amount /100 |  currency}}</td>
-              <td>{{trans.status}}</td>
-              <td>{{trans.balance  /100 |  currency}}</td>
-              <td>{{trans.updated  | date  :'medium' }}</td>
-
-          </tr>
-        </ng-container>
-
-        </tbody>
-        <tbody *ngIf="Transa?.length == 0">
-          <tr>
-            <td colspan="5" class="no-data-available">No data!</td>
-          </tr>
-        <tbody>
-      </table>
-
-    </div>
-  </h4>
-
-  </section>
-  <!-- /.content -->
+      <h6 class="panel-title">Planilla</h6>
+  </div>
+  <div class="panel-heading"> 
+  <table  datatable  [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" dt-instance="dtInstance" class="row-border hover tables ">
+    
+      <thead>
+        <tr>
+          <th>Email</th>
+          <th>Username</th>
+          <th>Name</th>
+          <th>Last_Name</th>
+          <th>Cuenta</th>
+          <th>Balance $</th>
+          <th>Ultimo ingreso</th>
+      </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let usuario of Usuarios"  >
+          <td (click)=funcionclick(usuario) class= "cursorr">{{usuario.email}}</td>
+          <td>{{usuario.username | uppercase}}</td>
+          <td>{{usuario.first_name}}</td>
+          <td>{{usuario.last_name}}</td>
+          <td>{{usuario.account}}</td>
+          <td>{{usuario.balance/100 | currency}}</td>
+         
+          <td>{{usuario.last_login  | date  :'medium'}}</td>
+      </tr>
+      </tbody>
+  </table>
+  </div>
 </div>
-<!-- /.content-wrapper -->
+</section>
+</div>
+
