--- a/src/app/Components/users/users.component.html
+++ b/src/app/Components/users/users.component.html
@@ -4,9 +4,9 @@
           <h1> Users: </h1>
        <h4>
           <div>
- 
+
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" >
-         
+
             <ng-container *ngIf="Usuarios?.length != 0">
             <thead>
 
@@ -19,39 +19,37 @@
                     <th>Balance $</th>
                     <th>Ultimo ingreso</th>
                 </tr>
-            </thead>         
+            </thead>
             <tbody>
               <tr *ngFor="let usuario of Usuarios" >
-                  
+
                   <td >
-                   
-                  
+
+
                       {{usuario.email}} <br />
                       <em *ngIf ="usuario.account">
                         <h6 (click)=funcionclick(usuario.account) data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">
                           More Info...
                         </h6>
                       </em>
-                 
-                
 
                   </td>
 
 
                   <td>
                     {{usuario.username | uppercase}}
-                  
-                  
-                  
-                  
-                  
-                  
+
+
+
+
+
+
                   </td>
                   <td>{{usuario.first_name}}</td>
                   <td>{{usuario.last_name}}</td>
                   <td>{{usuario.account}}</td>
                   <td>{{usuario.balance/100 | currency}}</td>
-                 
+
                   <td>{{usuario.last_login  | date  :'medium'}}</td>
               </tr>
             </tbody>
@@ -62,17 +60,17 @@
                 <img src="../../../assets/images/loading.gif">
               </tr>
             </tbody>
-  
-           
+
+
           </table>
         </div>
-      </h4> 
+      </h4>
 
-   
+
 <!-- MODAL -->
-      
+
   <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Modal</button> -->
-  
+
   <div class="modal fade " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -85,39 +83,38 @@
         <div class="modal-body">
           <form>
             <div class="form-group">
-       
+
               <!-- Balance de la cuenta de usuario Modal -->
-        <div *ngIf="AccountEndpoint"> 
-          <div *ngFor=" let a of AccountEndpoint.results" > 
-           Balance: {{a.currency.code}}  {{a.balance/100 | currency}}  &nbsp; &nbsp; &nbsp;  Available Balance: {{a.currency.code}} {{a.available_balance/100 |currency}} <br />
-                   
-           </div> 
-          </div> 
+        <div *ngIf="AccountEndpoint">
+          <div *ngFor=" let a of AccountEndpoint.results" >
+           Balance: {{a.currency.code}}  {{a.balance/100 | currency}}  &nbsp; &nbsp; &nbsp;
+           Available Balance: {{a.currency.code}} {{a.available_balance/100 |currency}} <br />
+
+           </div>
+          </div>
 
                   <!-- Transacciones Modal -->
                   <h4>Total Transactions: {{TransactionEndpoint.count}}</h4>
                   <h6>last 10 transactions</h6>
                   <h6>
                   <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover" class="display">
-                
+
                     <ng-container *ngIf="TransactionEndpoint?.length != 0">
                     <thead>
-  
+
                         <tr>
                             <th>Type</th>
                             <th>Sub Type</th>
                             <th>Currency</th>
                             <th>Amount</th>
-                            
+
                             <th>Balance</th>
                             <th>Estatus</th>
                             <th>Date</th>>
-                            
-                           
-                           
+
                         </tr>
                     </thead>
-            
+
                     <tbody >
                       <ng-container *ngFor="let trans of TransactionEndpoint.results ">
                       <tr>
@@ -126,22 +123,22 @@
                         <td >
                           <em *ngIf="trans.currency" class="reset"> {{trans.currency.code}} </em>
                         </td>
-                   
+
                           <td>{{trans.amount/100 | currency}}</td>
-                         
+
                           <td>{{trans.balance /100 | currency}}</td>
-                         
+
                           <td>{{trans.status}}</td>
                           <td>{{trans.created |date  :'short' }}</td>
-                       
+
                       </tr>
                     </ng-container>
-            
+
                     </tbody>
                     </ng-container>
-                            
+
                   </table> </h6>
-        
+
 
 
 
@@ -151,7 +148,7 @@
         <!--  -->
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-         
+
         </div>
       </div>
     </div>
