Get date by range

--- a/src/app/Components/content/content.component.html
+++ b/src/app/Components/content/content.component.html
@@ -1,4 +1,6 @@
+<body class="skin-blue fixed sidebar-mini sidebar-mini-expand-feature" style="height: auto; min-height: 100%;">
 <div class="content-wrapper ">
+
   <section class="content container-fluid">
 <div  class="panel panel-flat">
   <div class="panel-heading">
@@ -42,4 +44,4 @@
 </div>
 </section>
 </div>
-
+</body>
